--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "purescript-prelude": "^4.1.0",
     "purescript-console": "^4.2.0",
     "purescript-node-readline-aff": "https://github.com/aravindgopall/purescript-node-readline-aff.git#543ad7b3f9c905d432fc317b19c09e1313e54b37",
-    "purescript-effect": "^2.0.1"
+    "purescript-effect": "^2.0.1",
+    "purescript-node-child-process": "^5.0.0"
   },
   "devDependencies": {
     "purescript-psci-support": "^4.0.0"
